syntax = "proto3";

option go_package = "rpctest/grpc/protocol/pb";

package pb;

// The greeting service definition.
service Greeter {

  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
}


// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}


// The response message containing the greetings
message HelloReply {
  string message = 1;

}

//protoc --go_out=./pb --go_opt=paths=source_relative \
//--go-grpc_out=./pb --go-grpc_opt=paths=source_relative \
//hello.proto
